# C1_HAS

./: CMakeLists.txt  README.md  main.cpp  main.qml
content/: App.qml  ArcSlider.qml  Browser.qml  CMakeLists.txt  CardReaderMenu.qml  CircleSlider.qml  CustomLabel.qml  Dashboard.qml  DialButton.qml  Div.qml  GameItem.qml  GameMenu.qml  HIS.qml  Lighting.qml  NurseCall.qml  Pager.qml  PagerIcon.qml  RGBSlider.qml  RestaurantItem.qml  RestaurantMenu.qml  SettingBar.qml  TVItem.qml  TVMenu.qml  ToggleButton - Copy.qml  ToggleButton.qml  Weather.qml
content/data/: Backend.qml  Colors.qml  Constants.qml
inc/: gameitemdata.h  gamemodel.h  restaurantitemdata.h  restaurantmodel.h  serialcontroller.h  serialportreader.h  serialportwriter.h  togglebuttonviewmodel.h  tvitemdata.h  tvmodel.h
src/: gameitemdata.cpp  gamemodel.cpp  restaurantitemdata.cpp  restaurantmodel.cpp  serialcontroller.cpp  serialportreader.cpp  serialportwriter.cpp  togglebuttonviewmodel.cpp  tvitemdata.cpp  tvmodel.cpp
